--- a/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
@@ -1,1 +1,14 @@
-<p>cities works!</p>
+<div class="title">
+    <h1>Cities</h1>
+</div>
+
+<div *ngIf="cities!.length > 0;else noCities">
+    <ul *ngFor="let city of cities" class="collection">
+        <li class="listed-city">{{city.name}}</li>
+    </ul>
+</div>
+
+<ng-template #noCities>
+    <hr>
+    <h5>There are no cities in the database.</h5>
+</ng-template>
