made the city links redirect to businesses page with city parameter

--- a/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
@@ -5,7 +5,12 @@
 <div *ngIf="cities!.length > 0;else noCities">
     <ul *ngFor="let city of cities" class="collection">
         <ul *ngFor="let business of businesses">
-            <li *ngIf="business.cityName == city.name" class="listed-city">{{city.name}}</li>
+            <li *ngIf="business.cityName == city.name" class="listed-city">
+                <a
+                    [routerLink]="['businesses', city.name]">
+                    {{city.name}}
+                </a>
+            </li>
         </ul>
         
     </ul>
