--- a/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
@@ -1,1 +1,22 @@
-<p>businesses works!</p>
+<div class="title">
+    <h1>Businesses</h1>
+</div>
+
+<div *ngIf="businesses!.length > 0;else noBusinesses">
+    <ul *ngFor="let business of businesses" class="collection">
+        
+        <li *ngIf="business.cityName == cityNameFromRoute" class="listed-city">
+            <a
+                [routerLink]="['reviews', business.businessName]">
+                {{business.businessName}}
+            </a>
+        </li>
+        
+        
+    </ul>
+</div>
+
+<ng-template #noBusinesses>
+    <hr>
+    <h5>There are no cities in the database.</h5>
+</ng-template>
