added some bootstrap just to start off with it. forgot to switch to dev :(

--- a/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.css
+++ b/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.css
@@ -1,19 +1,15 @@
-.title h1 {
-    color: white;
-    text-align: center;
-    margin: 30px;
-}
-
 .listed-review {
     list-style: none;
     background-color: white;
     margin: 20px auto;
     padding: 15px;
     width: 400px;
-
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
 }
 
-.no-items{
-    color: white;
-    text-align: center;
+
+.review-page-container {
+    height: 100%;
+
 }
