--- a/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.css
+++ b/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.css
@@ -1,8 +1,3 @@
-.title h1 {
-    color: white;
-    text-align: center;
-    margin: 30px;
-}
 
 .listed-business {
     display: block;
@@ -18,3 +13,10 @@
 .listed-business:hover {
     background-color: rgb(236, 236, 236);
 }
+
+
+
+.business-page-container {
+    height: 100%;
+}
+
