--- a/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
@@ -1,23 +1,34 @@
-<div class="title">
-    <h1>Businesses</h1>
-</div>
+<div class="business-page-container">
+    <div class="title">
+        <h1>{{cityNameFromRoute}} Businesses</h1>
+    </div>
 
-<div *ngIf="businesses!.length > 0;else noBusinesses">
-    <ul *ngFor="let business of businesses" class="collection">
-        
-        <li *ngIf="business.cityName == cityNameFromRoute" >
-            <a
-                [routerLink]="['reviews', business.businessName]"
-                class="listed-business">
-                {{business.businessName}}
-            </a>
-        </li>
-        
-        
-    </ul>
-</div>
+    <div *ngIf="businessCount > 0" class="row row-cols-3">
+        <div *ngFor="let business of businesses" class="collection">
+            <div *ngIf="business.cityName == cityNameFromRoute">
+                
+                    <div class="col d-flex justify-content-center">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">{{business.businessName}}</h5>
+                          <p class="card-text">{{business.listOfServices}}</p>
+                          <a [routerLink]="['reviews', business.businessName]" class="btn btn-primary">Reviews</a>
+                        </div>
+                      </div>
 
-<ng-template #noBusinesses>
-    <hr>
-    <h5 class="no-items">There are no cities in the database.</h5>
-</ng-template>
+                      
+                    
+                    
+                      
+            </div>
+          
+            
+        </div>
+    </div>
+
+    
+
+    <ng-template [ngIf]="businessCount == 0">
+        <h5 class="no-items">There are no businesses in the database for this city.</h5>
+    </ng-template>
+</div>
