--- a/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.css
+++ b/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.css
@@ -1,14 +1,20 @@
-.title h1 {
-    color: white;
-    text-align: center;
-    margin: 30px;
-}
 
 .listed-city {
+    display: block;
     list-style: none;
-    background-color: white;
+    background-color: rgb(206, 223, 255);
     margin: 20px auto;
     padding: 15px;
     width: 400px;
-
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
 }
+
+.listed-city:hover {
+    background-color: rgb(180, 187, 224);
+}
+
+.city-page-container {
+    height: 100%;
+}
+
