--- a/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
@@ -1,22 +1,22 @@
-<div class="title">
-    <h1>Cities</h1>
-</div>
+<div class="city-page-container">    
+    
+    <div class="title">
+        <h1>Cities</h1>
+    </div>
 
-<div *ngIf="cities!.length > 0;else noCities">
-    <ul *ngFor="let city of cities" class="collection">
-        <ul *ngFor="let business of businesses">
-            <li *ngIf="business.cityName == city.name" class="listed-city">
+    <div *ngIf="cityCount > 0">
+        <div *ngFor="let city of cities" class="collection">    
                 <a
-                    [routerLink]="['businesses', city.name]">
+                    [routerLink]="['businesses', city.name]"
+                    class="listed-city">
                     {{city.name}}
                 </a>
-            </li>
-        </ul>
-        
-    </ul>
+        </div>
+    </div>
+
+    <ng-template [ngIf]="cityCount == 0">
+        <h5 class="no-items">There are no cities in the database.</h5>
+    </ng-template>
 </div>
 
-<ng-template #noCities>
-    <hr>
-    <h5>There are no cities in the database.</h5>
-</ng-template>
+
