--- a/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.html
@@ -3,13 +3,18 @@
         <h1>{{businessNameFromRoute}} Reviews</h1>
     </div>
 
-    <div *ngIf="reviewCount > 0">
+    <div *ngIf="reviewCount > 0" class="row row-cols-2">
         <div *ngFor="let review of reviews" class="collection">
             
             <div *ngIf="review.businessName == businessNameFromRoute" class="listed-review">
-                <p>{{review.author}}</p>
-                <p>Rating: {{review.rating}}</p>
-                <p>{{review.body}}</p>
+                <div class="col d-flex justify-content-center">
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">{{review.author}}</h5>
+                        <p class="card-text">{{review.body}}</p>
+                        <button (click)="delete(review)" class="btn btn-primary">Remove</button>
+                      </div>
+                    </div> 
             </div>
             
             
