--- a/challenge4-mvc-paulhemingway/src/styles.css
+++ b/challenge4-mvc-paulhemingway/src/styles.css
@@ -6,13 +6,17 @@
     font-family:'Inter', sans-serif;
 }
 
+
 body {
+    overflow-x: hidden;
+    background-image: linear-gradient(rgb(119, 0, 255), rgb(60, 7, 90));
     height: 100vh;
-    background-color: white;
+    
 }
 
+
 .title h1 {
-    color: black;
+    color: rgb(255, 255, 255);
     text-align: center;
     padding-top: 30px;
 }
