--- a/challenge4-mvc-paulhemingway/src/styles.css
+++ b/challenge4-mvc-paulhemingway/src/styles.css
@@ -6,14 +6,11 @@
     font-family:'Inter', sans-serif;
 }
 
-
 body {
     overflow-x: hidden;
     background-image: linear-gradient(rgb(119, 0, 255), rgb(60, 7, 90));
     height: 100vh;
-    
 }
-
 
 .title h1 {
     color: rgb(255, 255, 255);
@@ -36,7 +33,7 @@ a:visited {
 
 .card {
     width: 100%;
-    margin: 20px;
+    box-shadow: 5px 8px 0 rgb(255, 0, 234);
 }
 
 .card-title{
