--- a/challenge4-mvc-paulhemingway/src/app/top-bar/top-bar.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
 <nav class="navbar navbar-light" style="background-color: rgb(32, 0, 61);">
     <a class="navbar-brand" routerLink="">MVC Challenge</a>
-    <button class="btn btn-outline-light add-review">Add a Review</button>
+    <button class="btn btn-outline-light add-review" routerLink="addreview">Add a Review</button>
 </nav>
