added functionality for added data to the database

--- a/challenge4-mvc-paulhemingway/src/app/pages/add-review/add-review.component.css
+++ b/challenge4-mvc-paulhemingway/src/app/pages/add-review/add-review.component.css
@@ -21,7 +21,7 @@ form {
 }
 
 #rating {
-    width: 50%;
+    width: 70%;
 }
 
 .rating-group{
@@ -29,6 +29,14 @@ form {
     justify-content: space-between;
 }
 
+#rating-label {
+    display: block;
+}
+
+#stars {
+    text-align: right;
+    font-size: 20px;
+}
 
 
 
