--- a/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
@@ -4,23 +4,17 @@
     </div>
 
     <div *ngIf="businessCount > 0" class="row row-cols-3">
-        <div *ngFor="let business of businesses" class="collection">
-            <div *ngIf="business.cityName == cityNameFromRoute">
-                    <div class="col d-flex justify-content-center">
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">{{business.businessName}}</h5>
-                          <p class="card-text">{{business.listOfServices}}</p>
-                          <a [routerLink]="['reviews', business.businessName]" class="btn btn-primary">Reviews</a>
-                        </div>
-                      </div>   
-            </div>
-          
-            
+        <div *ngFor="let business of matchedBusinesses" class="collection">
+          <div class="col d-flex justify-content-center">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">{{business.businessName}}</h5>
+                <p class="card-text">{{business.listOfServices}}</p>
+                <a [routerLink]="['reviews', business.businessName]" class="btn btn-primary">Reviews</a>
+              </div>
+            </div>                       
         </div>
     </div>
-
-    
 
     <ng-template [ngIf]="businessCount == 0">
         <h5 class="no-items">There are no businesses in the database for this city.</h5>
