--- a/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.html
@@ -3,15 +3,15 @@
         <h1>{{businessNameFromRoute}} Reviews</h1>
     </div>
 
-    <div *ngIf="reviewCount > 0" class="row row-cols-2">
+    <div *ngIf="reviewCount > 0" class="row row-cols-3">
         <div *ngFor="let review of matchedReviews; let indexOfElement=index" class="collection">
             
             <div class="col d-flex justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h5 class="card-title">{{review.author}}</h5>
-                        <span *ngFor="let star of [].constructor(filledStars[indexOfElement])"><i class="bi bi-star-fill"></i></span>
-                        <span *ngFor="let star of [].constructor(emptyStars[indexOfElement])"><i class="bi bi-star"></i></span>
+                        <span *ngFor="let star of [].constructor(filledStars[indexOfElement])"><i class="fas fa-star"></i></span>
+                        <span *ngFor="let star of [].constructor(emptyStars[indexOfElement])"><i class="far fa-star"></i></span>
                         <p class="card-text">{{review.body}}</p>
                         <button (click)="delete(review)" class="btn btn-primary">Remove</button>
                       </div>
