clean up some code

--- a/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/reviews/reviews.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div *ngIf="reviewCount > 0" class="row row-cols-3">
-        <div *ngFor="let review of matchedReviews; let indexOfElement=index" class="collection">
+        <div *ngFor="let review of reviews; let indexOfElement=index" class="collection">
             
             <div class="col d-flex justify-content-center">
                     <div class="card">
