--- a/challenge4-mvc-paulhemingway/src/app/top-bar/top-bar.component.css
+++ b/challenge4-mvc-paulhemingway/src/app/top-bar/top-bar.component.css
@@ -3,10 +3,12 @@
 }
 
 
-.navbar-brand {
+.navbar-brand, .navbar-brand:visited {
     color: white;
 }
 
 .navbar-brand:hover {
     color: rgba(255, 255, 255, 0.7);
 }
+
+
