--- a/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/businesses/businesses.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div *ngIf="businessCount > 0" class="row row-cols-3">
-        <div *ngFor="let business of matchedBusinesses" class="collection">
+        <div *ngFor="let business of businesses" class="collection">
           <div class="col d-flex justify-content-center">
             <div class="card">
               <div class="card-body">
