--- a/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
+++ b/challenge4-mvc-paulhemingway/src/app/pages/cities/cities.component.html
@@ -6,11 +6,19 @@
 
     <div *ngIf="cityCount > 0">
         <div *ngFor="let city of cities" class="collection">    
-                <a
-                    [routerLink]="['businesses', city.name]"
-                    class="listed-city">
-                    {{city.name}}
-                </a>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-title">
+                            {{city.name}}
+                        </div>
+                        <a
+                        [routerLink]="['businesses', city.name]"
+                        class="btn btn-primary">
+                        Businesses
+                        </a>
+                    </div>
+                    
+                </div>
         </div>
     </div>
 
