--- a/challenge4-mvc-paulhemingway/src/app/top-bar/top-bar.component.css
+++ b/challenge4-mvc-paulhemingway/src/app/top-bar/top-bar.component.css
@@ -11,4 +11,8 @@
     color: rgba(255, 255, 255, 0.7);
 }
 
+.navbar {
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
 
