--- a/challenge4-mvc-paulhemingway/src/styles.css
+++ b/challenge4-mvc-paulhemingway/src/styles.css
@@ -8,7 +8,7 @@
 
 body {
     overflow-x: hidden;
-    background-image: linear-gradient(rgb(119, 0, 255), rgb(60, 7, 90));
+    background-image: radial-gradient(rgb(37, 0, 89), rgb(21, 1, 49));
     height: 100vh;
 }
 
@@ -33,7 +33,8 @@ a:visited {
 
 .card {
     width: 100%;
-    box-shadow: 5px 8px 0 rgb(255, 0, 234);
+    box-shadow: 8px 12px 0 rgb(255, 0, 234);
+    margin: 15px;
 }
 
 .card-title{
@@ -56,4 +57,13 @@ a:visited {
 
 .btn-primary:hover {
     background-color: rgb(202, 0, 186) !important;
+}
+
+.no-items {
+    color: white;
+}
+
+.back {
+    margin: 20px;
+    position: absolute;
 }
